<resources>
    <string name="app_name">ProjectSummer</string>
    <string name="programmers_title">برنامه نویس ها:</string>
    <string name="programmer_hosein">حسین قهرمان زاده</string>
    <string name="programmer_alireza">علیرضا اروندی</string>
    <string name="programmer_mohammad">محمد مهدی مزرعه لی</string>
    <string name="designers_title">طراح ها:</string>
    <string name="designers_mammad">محمد حسین جمالی</string>
    <string name="designers_atena">آتنا لرنی</string>
    <string name="special_thanks_title">با تشکر ویژه از:</string>
    <string name="special_thanks_1">فرشاد غلامی</string>
    <string name="special_thanks_2">یلدا جلیلوند</string>
    <string name="thanks_title">و با تشکر از:</string>
    <string name="thanks">حمیدرضا صحرایی \n علی مشایخ \n محمد کمانکش \n سامان خامسیان</string>
    <string name="log_in_button">ورود</string>
    <string name="sign_in_button">ثبت نام</string>
    <string name="password">رمز عبور</string>
    <string name="user_name">نام کاربری</string>
    <string name="repeated_password">تکرار رمز عبور</string>
    <string name="email">ایمیل</string>
    <string name="aroundme">اطراف من</string>
    <string name="weekbest">برترین های هفته</string>
    <string name="monthbest">برترین های ماه</string>
    <string name="profile_image_text">عکس خود را از میان عکس های زیر انتخاب کنید</string>
    <string name="choose_profile_image">عکس کاربری خود را انتخاب کنید</string>
    <string name="next">بعدی</string>
    <string name="choose_user_name">نام کاربری خود را انتخاب کنید</string>
    <string name="choose_password">رمز عبور خود را وارد کنید</string>
    <string name="end_register">ثبت نام نهایی</string>
    <string name="friends">دوستان</string>
    <string name="find_name">جست و جوی نام کاربری</string>
    <string name="find_chance">شانسی پیدا کن</string>
    <string name="trophy_text">کلکسیون افتخارات</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
