<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/register_fragment_shape"
    tools:context="com.q20.projectsummer.ui.RegisterChoosePasswordFragment">

        <LinearLayout
            android:layout_width="@dimen/register_main_profile_image_shape"
            android:layout_height="@dimen/register_main_profile_image_shape"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/register_image_veiw_shape">

            <ImageView
                android:id="@+id/register_password_profile_image"
                android:tag="@drawable/char_m_40"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <com.q20.projectsummer.ui.AutoResizeTextViewWithAfsanehFont
            android:id="@+id/register_password_page_username_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="@dimen/register_texts_font_size"
            android:text=""
            android:textColor="@color/colorA17"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"/>

        <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/choose_password"
            android:textSize="@dimen/total_recycler_text_size"
            android:textColor="@color/colorA17"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="numberPassword"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/register_edit_text_shape"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="numberPassword"
            android:hint="@string/repeated_password"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/register_edit_text_shape"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.q20.projectsummer.ui.ButtonsWithIrsansFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_register"
            android:textSize="@dimen/buttons_text_size"
            android:layout_gravity="center"
            android:background="@drawable/ranking_page_buttons_shape"
            android:onClick="onChoosePasswordClicked"/>


</LinearLayout>
