<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.q20.projectsummer.ui.RankingPageActivity">


    <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
        android:id="@+id/ranking_page_weekly_button"
        android:layout_width="121dp"
        android:layout_height="@dimen/ranking_page_buttons_height_size"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/red_buttons_relative_layout_shape"
        android:gravity="center"
        android:onClick="onWeekButtonClicked">

        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
            android:layout_width="121dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/weekbest"
            android:textSize="@dimen/text_size_medium" />
    </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>

    <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
        android:id="@+id/ranking_page_month_button"
        android:layout_width="121dp"
        android:layout_height="@dimen/ranking_page_buttons_height_size"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ranking_page_buttons_shape"
        android:gravity="center"
        android:onClick="onMonthButtonClicked">

        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
            android:layout_width="121dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/monthbest"
            android:textSize="@dimen/text_size_medium" />
    </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>

    <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
        android:id="@+id/ranking_page_around_me_button"
        android:layout_width="121dp"
        android:layout_height="45dp"
        android:layout_marginLeft="274dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ranking_page_buttons_shape"
        android:gravity="center"
        android:onClick="onAroundButtonClicked">

        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
            android:layout_width="121dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/aroundme"
            android:textSize="30sp" />
    </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>


    <com.q20.projectsummer.ResponsiveViews.ResponsiveFrameLayout
        android:id="@+id/ranking_page_fragment_container"
        android:layout_width="379dp"
        android:layout_height="643dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="72dp" />
</RelativeLayout>
