<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorA6"
    tools:context="com.q20.projectsummer.ui.SignInFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/user_name_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding_size">

            <EditText
                android:id="@+id/user_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/register_text_views_height"
                android:layout_weight="3"
                android:background="@drawable/register_edit_text_shape"
                android:inputType="text"
                android:gravity="center"
                android:layout_marginRight="@dimen/btn_main_padding_top_down"
                android:hint="@string/user_name"/>
            <com.q20.projectsummer.ui.AutoResizeTextView
                android:id="@+id/user_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_name"
                android:textSize="@dimen/text_size_title"
                android:maxLines="1"
                android:textColor="@color/colorA17"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding_size"
            android:layout_below="@+id/user_name_linear_layout"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/register_text_views_height"
                android:layout_weight="3"
                android:background="@drawable/register_edit_text_shape"
                android:inputType="numberPassword"
                android:gravity="center"
                android:layout_marginRight="@dimen/btn_main_padding_top_down"
                android:hint="@string/password"/>
            <com.q20.projectsummer.ui.AutoResizeTextView
                android:id="@+id/password_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:textSize="@dimen/text_size_title"
                android:maxLines="1"
                android:textColor="@color/colorA17"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/repeated_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding_size"
            android:layout_below="@+id/password_layout"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/repeated_password_edit_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/register_text_views_height"
                android:layout_weight="3"
                android:background="@drawable/register_edit_text_shape"
                android:inputType="numberPassword"
                android:gravity="center"
                android:layout_marginRight="@dimen/btn_main_padding_top_down"
                android:hint="@string/repeated_password"/>
            <com.q20.projectsummer.ui.AutoResizeTextView
                android:id="@+id/repeated_password_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/repeated_password"
                android:textSize="@dimen/text_size_title"
                android:maxLines="1"
                android:textColor="@color/colorA17"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding_size"
            android:layout_below="@+id/repeated_password_layout"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/register_text_views_height"
                android:layout_weight="3"
                android:background="@drawable/register_edit_text_shape"
                android:inputType="textEmailAddress"
                android:gravity="center"
                android:layout_marginRight="@dimen/btn_main_padding_top_down"
                android:hint="@string/email"/>
            <com.q20.projectsummer.ui.AutoResizeTextView
                android:id="@+id/email_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="@dimen/text_size_title"
                android:maxLines="1"
                android:textColor="@color/colorA17"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
